lesson9/service-lb-single.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment
  labels:
    app: my-k8s-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      project: kgb
  template:
    metadata:
      labels:
        project: kgb # Service will look for those PODS Labels
    spec:
      containers:
        - name: kgb-web
          image: httpd
          ports:
            - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: my-single-pod-service
  labels: 
    env   : prod
    owner : frankyjohn
spec:
  selector:
    project: kgb #selecting PODS with labels
  ports:
    - name          : app-listener
      protocol      : TCP
      port          : 80 #port on load balancer
      targetPort    : 80 #port on POD
  type: LoadBalancer
