lesson9/service2-lb-multi copy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-multi-pod
  labels:
    app: my-k8s-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      project: cia
  template:
    metadata:
      labels:
        project: cia # Service will look for those PODS Labels
    spec:
      containers:
        - name: my-web
          image: httpd
          ports:
            - containerPort: 80
        - name: not-my-web
          image: tomcat
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: my-multi-pod-service
  labels: 
    env   : prod
    owner : frankyjohn
spec:
  type: LoadBalancer
  selector:
    project: cia #selecting PODS with labels
  ports:
    - name          : my-web-app-listener
      protocol      : TCP
      port          : 80 #port on load balancer
      targetPort    : 80 #port on POD

    - name          : not-web-app-listener
      protocol      : TCP
      port          : 8888 #port on load balancer
      targetPort    : 8080 #port on POD
