lesson9/service3-lb-autoscaling.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-deployment-autoscaling
  labels:
    app: my-k8s-deployment
spec:
  selector:
    matchLabels:
      project: xyz
  template:
    metadata:
      labels:
        project: xyz # Service will look for those PODS Labels
    spec:
      containers:
        - name: xyz-web
          image: nginx
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: my-autoscaling-pod-service
  labels: 
    env: prod
    owner: Frankyjohn
spec:
  selector:
    project: xyz
  ports:
    - name      : app-listener
      protocol  : TCP
      port      : 80
      targetPort: 80
  type: LoadBalancer
