lesson9/ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
  - host: www.vasya.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: main
            port:
              number: 80

  - host: web1.vasya.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web1
            port:
              number: 80


  - host: web2.vasya.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: web2
            port:
              number: 80


  - host: webx.vasya.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: webx
            port:
              number: 80



  - host: cat.vasya.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tomcat
            port:
              number: 8080
